--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p> Faculty of management science <br>
               Year 2 <br>
               Information system.</p>
+          <div class="w3-display-container">
+            <img src="PSU.png" style="width:100%">
+          </div>
           <hr>
         </div>
         <div class="w3-container">
