--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p> science calss <br>
               I have music band <br>
               Photograpy.</p>
+          <div class="w3-display-container">
+            <img src="NS.jpg" style="width:50%">
           <hr>
         </div>
 
