--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Comic Sans MS", cursive, sans-serif}
               Year 2 <br>
               Information system.</p>
           <div class="w3-display-container">
-            <img src="PSU.png" style="width:25%">
+            <a href="http://www.psu.ac.th/" targrt="_blank"><img src="PSU.png" style="width:25%"></a>
           </div>
           <hr>
         </div>
