--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Comic Sans MS", cursive, sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <a href="https://www.facebook.com/StillOnMyTime" target="_blank"><i class="fa fa-facebook-official w3-hover-text-indigo w3-large"></i></a>
-  <a href="https://twitter.com/rapsunzz" target="_blank"><i class="fa fa-instagram w3-hover-text-purple w3-large"></i></a>
-  <a href="https://www.instagram.com/iisun__/" target="_blank"><i class="fa fa-twitter w3-hover-text-light-blue w3-large"></i></a>
+  <a href="https://www.instagram.com/iisun__/" target="_blank"><i class="fa fa-instagram w3-hover-text-purple w3-large"></i></a>
+  <a href="https://twitter.com/rapsunzz/" target="_blank"><i class="fa fa-twitter w3-hover-text-light-blue w3-large"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
